<resources>
    <string name="app_name">Sample</string>
    <string name="Login">Login</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="Mname">Middle Name</string>
    <string name="p_no">Moblie</string>
    <string name="state">State</string>
    <string name="Cuntry">Country</string>
    <string name="email">Email</string>
    <string name="pswd">Password</string>
    <string name="user">UserName/Email</string>
    <string name="Register">Register</string>
    <string name="re_pas">Re-Password</string>
    <string name="msg">Message</string>
    <string name="lgout">Logout</string>
    <string name="fdbck">Contact Us</string>


</resources>