<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regform">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:src="@mipmap/user_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="10sp"
            android:text="@string/fname"
            android:textSize="30sp" />
        <ImageView
            android:src="@mipmap/user_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/fname"
            android:textSize="30sp" />


        <ImageView
            android:src="@mipmap/mobile_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/p_no"
            android:textSize="30sp" />
        <ImageView
            android:src="@mipmap/email_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/fname"
            android:textSize="30sp" />

        <ImageView
            android:src="@mipmap/password_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/email"
            android:textSize="30sp" />

        <ImageView
            android:src="@mipmap/password_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="20sp"
            android:text="@string/Cuntry"
            android:textSize="30sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_margin="10sp"
            android:id="@+id/f_name"
            android:paddingLeft="12sp"
            android:hint="@string/fname"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="text"
            android:background="@drawable/boxbackground"
            />

        <EditText
            android:paddingLeft="12sp"
            android:layout_margin="10sp"
            android:id="@+id/l_name"
            android:hint="@string/lname"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="text"
            android:background="@drawable/boxbackground"
            />
        <EditText
            android:paddingLeft="12sp"
            android:layout_margin="10sp"
            android:hint="@string/p_no"
            android:textSize="30sp"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="numberDecimal"
            android:background="@drawable/boxbackground"
            />
        <EditText
            android:paddingLeft="12sp"
            android:layout_margin="10sp"
            android:hint="@string/email"
            android:textSize="30sp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/boxbackground"
            />

        <EditText
            android:paddingLeft="12sp"
            android:layout_margin="10sp"
            android:hint="@string/pswd"
            android:textSize="30sp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="textVisiblePassword"
            android:background="@drawable/boxbackground"
            />
        <EditText
            android:paddingLeft="12sp"
            android:layout_margin="10sp"
            android:hint="@string/re_pas"
            android:textSize="30sp"
            android:id="@+id/repswd"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="textVisiblePassword"
            android:background="@drawable/boxbackground"
            />

    </LinearLayout>

</LinearLayout>
