<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradinat"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".Contact_Us_Form">

    <TextView
        android:layout_margin="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Contact"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:text="@string/fname"/>
    <EditText
        android:id="@+id/f_namef"
        android:paddingLeft="10sp"
        android:background="@drawable/shadow"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:text="@string/lname"/>
    <EditText
        android:id="@+id/l_namef"
        android:paddingLeft="10sp"
        android:background="@drawable/shadow"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/emailf"
        android:paddingLeft="10sp"
        android:background="@drawable/shadow"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:text="@string/msg"/>
    <EditText
        android:id="@+id/messagef"
        android:paddingLeft="10sp"
        android:background="@drawable/shadow"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:inputType="text"/>


    <Button
        android:id="@+id/contactusSubmit"
        android:layout_margin="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:layout_marginRight="20sp"
        android:background="@color/colorPrimary" />

</LinearLayout>