<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image1"
            android:layout_margin="10sp"
            android:layout_width="50sp"
            android:src="@mipmap/user_icon_foreground"
            android:background="@drawable/boxbackground"
            android:layout_height="50sp"/>
        <EditText
            android:paddingLeft="20sp"
            android:hint="@string/user"
            android:textSize="20sp"
            android:layout_margin="10sp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="text"
            android:background="@drawable/boxbackground"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="10sp"
            android:layout_width="50sp"
            android:src="@mipmap/password_icon"
            android:background="@drawable/boxbackground"
            android:layout_height="50sp"/>
        <EditText
            android:paddingStart="20sp"
            android:autofillHints="@string/pswd"
            android:paddingLeft="20sp"
            android:hint="@string/pswd"
            android:textSize="20sp"
            android:layout_margin="10sp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textPassword"
            android:background="@drawable/boxbackground"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:background="@color/deepskyblue"
            android:id="@+id/login_btn"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            />
        <TextView
            android:layout_margin="5sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:onClick="register"
            android:text="Register Here"/>
    </LinearLayout>


</LinearLayout>